many improvement. Double Buffer for cache. No Lock. Atomic pointer switching

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ set(SOURCE_FILES
         DbDataDefaultCache.cpp
         DbDataDaughterCache.cpp
         DbDataClientsDenyList.cpp
+        DefaultDataContainer.cpp
+        ClientsDenyListContainer.cpp
      )
 
 
