added Lock-free double buffer. added Return RCode = 5 (refused to answer) by Vladyslav Adaskalitsa

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ set(SOURCE_FILES
         DbDataClientsDenyList.cpp
         DefaultDataContainer.cpp
         ClientsDenyListContainer.cpp
+        DaugterCacheContainer.cpp
      )
 
 
