waiting mentee answer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,8 +27,11 @@ set(SOURCE_FILES
         DefaultDataContainer.cpp
         ClientsDenyListContainer.cpp
         DaugterCacheContainer.cpp
-        HlrCounter.cpp
+        Hlr_Counter.cpp
+        Hlr_Requests_Controller.cpp
+        Hlr_Requests_HTTP11_Pipelined_Client.cpp
         ProcessingTypeContainer.cpp
+
      )
 
 
